[package]
name = "sandbox-rust-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Promptomatix Contributors"]
description = "Rust implementation of Model Context Protocol (MCP) sandbox server"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[lib]
name = "sandbox_rust_mcp"
path = "src/lib.rs"

[[bin]]
name = "sandbox-rust-mcp"
path = "src/main.rs"
